--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -22,7 +22,7 @@ jobs:
       fail-fast: false
       max-parallel: 2
       matrix:
-        OS: [ubuntu-latest, ubuntu-20.04, windows-latest]
+        os: [ubuntu-latest, ubuntu-20.04, windows-latest]
         images: [hello-world, amd64/alpine]
         
         exclude:
